# gpu-fractals

./: CMakeLists.txt  LICENSE  README.md
ext/GLAD/include/glad/: glad.h
ext/GLAD/src/: glad.c
ext/GLFW/lib/: glfw3.lib
ext/GLFW/lib/cmake/glfw3/: glfw3ConfigVersion.cmake  glfw3Targets-release.cmake  glfw3Targets.cmake
ext/GLFW/lib/pkgconfig/: glfw3.pc
ext/STB/: stb_implementation.c
include/: defines.hpp.in
shaders/: julia.compute  julia.frag  mandelbrot.compute  mandelbrot.frag  newton.compute  newton.frag
src/: gpu_fractals.cpp
